--- a/QLGV_DTSoft/Views/KeHoachGiaoViecs/Details.cshtml
+++ b/QLGV_DTSoft/Views/KeHoachGiaoViecs/Details.cshtml
@@ -39,7 +39,7 @@
         <ul>
             @foreach (var chitieu in Model.ChiTieus)
             {
-                <li>@chitieu.Tenchitieu (@chitieu.Motact)</li>
+                <li>@chitieu.Chitieu (@chitieu.Doanhso / @chitieu.Donvitinh)</li>
             }
         </ul>
     </div>
