--- a/QLGV_DTSoft/Views/Ketxuat/Index.cshtml
+++ b/QLGV_DTSoft/Views/Ketxuat/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<QLGV_DTSoft.Data.NguoiDung>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Kết xuất danh sách nhân viên";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style>
@@ -10,7 +10,6 @@
         margin-right: 10px;
     }
 </style>
-<h1>Kết xuất danh sách nhân viên</h1>
 <br />
 <div class="rowseach">
     <form asp-action="Index" method="get" class="form-inline">
