--- a/QLGV_DTSoft/Views/NguoiDungs/Index.cshtml
+++ b/QLGV_DTSoft/Views/NguoiDungs/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@model IEnumerable<QLGV_DTSoft.Data.NguoiDung>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Danh sách nhân viên trong khu vực";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1>Danh sách nhân viên</h1>
 <br />
 <p>
     <a asp-action="Create" class="btn btn-success">Thêm mới</a>
@@ -14,7 +13,7 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between">
                 <div class="header-title">
-                    <h4 class="card-title">Danh sách nhân viên</h4>
+                    
                 </div>
             </div>
             <div class="card-body">
