--- a/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
@@ -13,50 +13,57 @@
             <ul id="iq-sidebar-toggle" class="iq-menu">
                 <li class="">
                     <a href="/" class="svg-icon">
-                        <i class="fa-solid fa-house"></i>
+                        <i class="ri-home-2-line"></i>
                         <span class="ml-4">Trang chủ</span>
                     </a>
                 </li>
                 
                 <li class="">
                     <a href="/nguoidungs" class="svg-icon">
-                        <i class="fa-regular fa-user"></i>
+                        <i class="ri-user-line"></i>
                         <span class="ml-4">Quản lý nhân viên</span>
                     </a>
                 </li>
                 <li class="">
                     <a href="/KeHoachCongViecs" class="svg-icon">
-                        <i class="fa-solid fa-list"></i>
+                        <i class="ri-list-unordered"></i>
                         <span class="ml-4">Kế hoạch công việc</span>
                     </a>
                 </li>
                 <li class="">
                     <a href="/kehoachgiaoviecs" class="svg-icon">
-                        <i class="fa-solid fa-bars-progress"></i>
+                        <i class="ri-play-list-add-line"></i>
                         <span class="ml-4">Kế hoạch giao việc</span>
+                    </a>
+                </li>
+
+                <li class="">
+                    <a href="/phancongcongviec" class="svg-icon">
+                        <i class="ri-todo-line"></i>
+                        <span class="ml-4">Phân công công việc</span>
                     </a>
                 </li>
                 <li class="">
                     <a href="/bophans" class="svg-icon">
-                        <i class="fa-solid fa-users-rectangle"></i>
+                        <i class="ri-team-line"></i>
                         <span class="ml-4">Quản lý bộ phận</span>
                     </a>
                 </li>
                 <li class="">
                     <a href="/KhuVucs" class="svg-icon">
-                        <i class="fa-solid fa-users-rectangle"></i>
+                        <i class="ri-map-pin-line"></i>
                         <span class="ml-4">Quản lý khu vực</span>
                     </a>
                 </li>
                 <li class="">
                     <a href="/VaiTroes" class="svg-icon">
-                        <i class="fa-solid fa-users-rectangle"></i>
+                        <i class="ri-shield-user-line"></i>
                         <span class="ml-4">Quản lý vai trò</span>
                     </a>
                 </li>
                 <li class="">
                     <a href="/Ketxuat" class="svg-icon">
-                        <i class="fa-solid fa-users-rectangle"></i>
+                        <i class="ri-printer-line"></i>
                         <span class="ml-4">Kết xuất</span>
                     </a>
                 </li>
