--- a/QLGV_DTSoft/Views/BoPhans/Index.cshtml
+++ b/QLGV_DTSoft/Views/BoPhans/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<QLGV_DTSoft.Data.BoPhan>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Danh sách các bộ phận có trong hệ thống";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1>Danh sách các bộ phận có trong hệ thống</h1>
+
 <br />
 <p>
     <a asp-action="Create" class="btn btn-success">Thêm mới bộ phận</a>
@@ -14,7 +14,7 @@
         <div class="card">
             <div class="card-header d-flex justify-content-between">
                 <div class="header-title">
-                    <h4 class="card-title">Danh sách bộ phận</h4>
+                    
                 </div>
             </div>
             <div class="card-body">
