--- a/QLGV_DTSoft/Views/NguoiDungs/Edit2.cshtml
+++ b/QLGV_DTSoft/Views/NguoiDungs/Edit2.cshtml
@@ -1,4 +1,6 @@
-﻿@model QLGV_DTSoft.Data.NguoiDung
+﻿@using System.Security.Claims
+
+@model QLGV_DTSoft.Data.NguoiDung
 
 @{
     ViewData["Title"] = "Edit2";
@@ -80,7 +82,7 @@
                 <input type="submit" value="Lưu" class="btn btn-primary" />
             </div>
             <div class="form-group">
-                <input type="button" class="btn btn-primary" value="Đổi mật khẩu" onclick="location.href='@Url.Action("EditMK", "NguoiDungs", new { id = @Context.Session.GetInt32("idnd") })'" />
+                <input type="button" class="btn btn-primary" value="Đổi mật khẩu" onclick="location.href='@Url.Action("EditMK", "NguoiDungs", new { id = @User.FindFirstValue("idNguoidung")})'" />
             </div>
         </form>
     </div>
