--- a/QLGV_DTSoft/Views/Shared/_Layout.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
         
     </div>
     @Html.Partial("_Footer")
+    <!-- Thư viện jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <!-- Backend Bundle JavaScript -->
     <script src="~/assets/js/backend-bundle.min.js"></script>
     
@@ -58,6 +60,6 @@
     
     <script src="~/assets/vendor/moment.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    @RenderSection("scripts", required: false)
   </body>
 </html>
