--- a/QLGV_DTSoft/Views/Shared/_Topbar.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_Topbar.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using System.Security.Claims
+@{
     string username = Context.User.Identity.Name;
 }
 <div class="iq-top-navbar">
@@ -215,7 +216,7 @@
                                     <svg class="svg-icon mr-0 text-primary" id="h-02-p" width="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
                                     </svg>
-                                    <a href="/NguoiDungs/Edit2/@Context.Session.GetInt32("idnd")">Chỉnh sửa thông tin</a>
+                                    <a href="/NguoiDungs/Edit2/@User.FindFirstValue("idNguoidung")">Chỉnh sửa thông tin</a>
                                 </li>
                                 @*<li class="dropdown-item d-flex svg-icon">
                                     <svg class="svg-icon mr-0 text-primary" id="h-03-p" width="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
