--- a/QLGV_DTSoft/Views/Ketxuat/Index.cshtml
+++ b/QLGV_DTSoft/Views/Ketxuat/Index.cshtml
@@ -14,66 +14,86 @@
 <div class="rowseach">
     <form asp-action="Index" method="get" class="form-inline">
         <p><select name="idbp" class="form-control" asp-items="@ViewBag.bophan"></select></p>
+        <p><select name="idct" class="form-control" asp-items="@ViewBag.chitieu"></select></p>
+        <p><select name="kq" class="form-control" asp-items="@ViewBag.ketqua"></select></p>
         <p style="width:81px"><input type="submit" class="btb btn-success" value="Tìm kiếm" /></p>
     </form>
+    <p>
+        <form asp-action="Export" method="post" enctype="multipart/form-data" style="display: inline-block; margin-left: 10px;">
+            <input type="hidden" name="GridHtml" />
+            <input type="submit" value="Xuất File" id="btnSubmit" class="btn btn-success" />
+        </form>
+    </p>
 </div>
+<br />
 <div class="row">
     <div class="col-sm-12">
         <div class="card">
-            <div class="card-header d-flex justify-content-between">
-                <div class="header-title">
-                    <h4 class="card-title">@ViewBag.tbkx</h4>
+            <div id="Grid">
+                <div class="card-header d-flex justify-content-between">
+                    <div class="header-title">
+                        <h4 class="card-title">@ViewBag.tbkx</h4>
+                    </div>
                 </div>
-            </div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table id="datatable" class="table data-table table-striped">
-                        <thead>
-                            <tr class="ligth">
-                                <th>
-                                    Tên tài khoản
-                                </th>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table id="datatable" class="table data-table table-striped">
+                            <thead>
+                                <tr class="ligth">
+                                    <th>
+                                        Tên tài khoản
+                                    </th>
 
-                                <th>
-                                    Họ tên người dùng
-                                </th>
+                                    <th>
+                                        Họ tên người dùng
+                                    </th>
 
-                                <th>
-                                    Bộ phận làm việc
-                                </th>
+                                    <th>
+                                        Bộ phận làm việc
+                                    </th>
 
-                                <th></th>
-                            </tr>
-
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Tennguoidung)
-                                    </td>
-
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Hoten)
-                                    </td>
-
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.IdBpNavigation.Tenbophan)
-                                    </td>
-
-                                    <td>
-                                        
-                                        <a asp-action="Details" asp-route-id="@item.IdNd">Thông tin chi tiết</a> 
-                                       
-                                    </td>
+                                    <th></th>
                                 </tr>
-                            }
-                        </tbody>
 
-                    </table>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Tennguoidung)
+                                        </td>
+
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Hoten)
+                                        </td>
+
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.IdBpNavigation.Tenbophan)
+                                        </td>
+
+                                        <td>
+                                            <input type="button" style="width:90px;" class="btn btn-primary" value="Chi tiết" onclick="location.href='@Url.Action("Details", new { id = item.IdNd })'" />
+                                           
+
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript">
+    $(function () {
+        $("#btnSubmit").click(function () {
+            $("input[name='GridHtml']").val($("#Grid").html());
+        });
+    });
+</script>
