--- a/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_Sidebar.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="iq-sidebar  sidebar-default ">
+﻿@using System.Security.Claims;
+@using QLGV_DTSoft.Data;
+<div class="iq-sidebar  sidebar-default ">
     <div class="iq-sidebar-logo d-flex align-items-center">
         <a href="../backend/index.html" class="header-logo">
             @*<img src="../assets/images/logo.svg" alt="logo">*@
@@ -17,59 +19,95 @@
                         <span class="ml-4">Trang chủ</span>
                     </a>
                 </li>
-                
-                <li class="">
-                    <a href="/nguoidungs" class="svg-icon">
-                        <i class="ri-user-line"></i>
-                        <span class="ml-4">Quản lý nhân viên</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/KeHoachCongViecs" class="svg-icon">
-                        <i class="ri-list-unordered"></i>
-                        <span class="ml-4">Kế hoạch công việc</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/kehoachgiaoviecs" class="svg-icon">
-                        <i class="ri-play-list-add-line"></i>
-                        <span class="ml-4">Kế hoạch giao việc</span>
-                    </a>
-                </li>
-
-                <li class="">
-                    <a href="/phancongcongviec" class="svg-icon">
-                        <i class="ri-todo-line"></i>
-                        <span class="ml-4">Phân công công việc</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/bophans" class="svg-icon">
-                        <i class="ri-team-line"></i>
-                        <span class="ml-4">Quản lý bộ phận</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/KhuVucs" class="svg-icon">
-                        <i class="ri-map-pin-line"></i>
-                        <span class="ml-4">Quản lý khu vực</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/VaiTroes" class="svg-icon">
-                        <i class="ri-shield-user-line"></i>
-                        <span class="ml-4">Quản lý vai trò</span>
-                    </a>
-                </li>
-                <li class="">
-                    <a href="/Ketxuat" class="svg-icon">
-                        <i class="ri-printer-line"></i>
-                        <span class="ml-4">Kết xuất</span>
-                    </a>
-                </li>
+                @{
+                    DtsoftContext _context = new DtsoftContext();
+                    var count1 = _context.CoQuyenTruyCaps.Where(c => c.IdQuyen == 1 && c.IdVt == int.Parse(User.FindFirstValue("idvaitro"))).Count();
+                    if (count1 != 0)
+                    {
+                        <li class="">
+                            <a href="/nguoidungs" class="svg-icon">
+                                <i class="ri-user-line"></i>
+                                <span class="ml-4">Quản lý nhân viên</span>
+                            </a>
+                        </li>
+                    }
+                    var count2 = _context.CoQuyenTruyCaps.Where(c => c.IdQuyen == 2 && c.IdVt == int.Parse(User.FindFirstValue("idvaitro"))).Count();
+                    if (count2 != 0)
+                    {
+                        <li class="">
+                            <a href="/bophans" class="svg-icon">
+                                <i class="ri-team-line"></i>
+                                <span class="ml-4">Quản lý bộ phận</span>
+                            </a>
+                        </li>
+                    }
+                    var count3 = _context.CoQuyenTruyCaps.Where(c => c.IdQuyen == 3 && c.IdVt == int.Parse(User.FindFirstValue("idvaitro"))).Count();
+                    if (count3 != 0)
+                    {
+                        <li class="">
+                            <a href="/KeHoachCongViecs" class="svg-icon">
+                                <i class="ri-list-unordered"></i>
+                                <span class="ml-4">Kế hoạch công việc</span>
+                            </a>
+                        </li>
+                    }
+                    var count4 = _context.CoQuyenTruyCaps.Where(c => c.IdQuyen == 4 && c.IdVt == int.Parse(User.FindFirstValue("idvaitro"))).Count();
+                    if (count4 != 0)
+                    {
+                        <li class="">
+                            <a href="/kehoachgiaoviecs" class="svg-icon">
+                                <i class="ri-play-list-add-line"></i>
+                                <span class="ml-4">Kế hoạch giao việc</span>
+                            </a>
+                        </li>
+                    }
+                    var count5 = _context.CoQuyenTruyCaps.Where(c => c.IdQuyen == 5 && c.IdVt == int.Parse(User.FindFirstValue("idvaitro"))).Count();
+                    if (count5 != 0)
+                    {
+                        <li class="">
+                            <a href="/phancongcongviec" class="svg-icon">
+                                <i class="ri-todo-line"></i>
+                                <span class="ml-4">Phân công công việc</span>
+                            </a>
+                        </li>
+                    }
+                    var count6 = _context.CoQuyenTruyCaps.Where(c => c.IdQuyen == 6 && c.IdVt == int.Parse(User.FindFirstValue("idvaitro"))).Count();
+                    if (count6 != 0)
+                    {
+                        <li class="">
+                            <a href="/KhuVucs" class="svg-icon">
+                                <i class="ri-map-pin-line"></i>
+                                <span class="ml-4">Quản lý khu vực</span>
+                            </a>
+                        </li>
+                    }
+                    var count7 = _context.CoQuyenTruyCaps.Where(c => c.IdQuyen == 7 && c.IdVt == int.Parse(User.FindFirstValue("idvaitro"))).Count();
+                    if (count7 != 0)
+                    {
+                        <li class="">
+                            <a href="/VaiTroes" class="svg-icon">
+                                <i class="ri-shield-user-line"></i>
+                                <span class="ml-4">Quản lý vai trò</span>
+                            </a>
+                        </li>
+                    }
+                    var count8 = _context.CoQuyenTruyCaps.Where(c => c.IdQuyen == 8 && c.IdVt == int.Parse(User.FindFirstValue("idvaitro"))).Count();
+                    if (count8 != 0)
+                    {
+                        <li class="">
+                            <a href="/Ketxuat" class="svg-icon">
+                                <i class="ri-printer-line"></i>
+                                <span class="ml-4">Kết xuất</span>
+                            </a>
+                        </li>
+                    }
+                   
+                   
+                    
+                }
             </ul>
         </nav>
-        
+
         <div class="pt-5 pb-2"></div>
     </div>
 </div>
